--- a/pratikum01.html
+++ b/pratikum01.html
@@ -2,14 +2,34 @@
 
 <html>
 <head>
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>WebKrisna</title>
 </head>
 <body>
   <h1>
     SIAP MELAYANIN ANDA!
   </h1>
-  <p>Saya lagi belajar buat web!</p>
-  <img src=""
+  <hr>
+  <p>Saya lagi belajar buat web style</p>
+  </div>
+  <div>
+  <img src="https://tse1.mm.bing.net/th/id/OIP.-bSMDFuVfGq5pozVd3Bm2wHaGk?pid=Api&P=0&h=180" alt="ini-logo" width="150px" height="150px"
+  </div>
+  <div>
+    <table style="border: 10px solid crimson">
+      <thead>
+        <tr>
+          <th style="border: 5px solid crimson">No</th>
+          <th style="border: 5px solid crimson">NIM</th>
+          <th style="border: 5px solid crimson">Nama Lengkap</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="border: 5px solid crimson">1</td>
+          <td style="border: 5px solid crimson">0110225086</td>
+          <td style="border: 5px solid crimson">Krisna Wijaya</td>
+        </tr>
+      </tbody>
+ </table>
 </body>
 </html>
